# SolOptXMR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  batteries.json  ci-default  computers.json  config.json  geo-template.json  knn  requirements.txt  soloptxmr.py
.github/workflows/: linux.yml  minimal.yml  osx.yml
docs/: automation.md  config.md  economy.md  ocr.md  project-descr.md  safety.md  testing.md  use-cases.md
docs/web-archive/: README.md
docs/web-archive/lifepo4/footprinthero.com/: README.md
src/: CMakeLists.txt  arrays.py  batteries.json  computers.json  externals  generator.py  geo-template.json  geolocation.py  knn  kraken.py  ocr.py  ocr_gas.py  prod.py  profitability.py  sensors.py  sunrise_lib.py  tests.py  ui_asciimatics.py  ui_console.py  ui_curses.py  ui_curses_menu.py  ui_lib.py  voltage_lib.py  voltage_plot.py  weather_lib.py
src/custom-scripts/img-capture/fswebcam-bare/: img_capture_module.py
src/custom-scripts/img-capture/fswebcam-complex/: img_capture_module.py
src/data/parsing-testcases/: wind-url.html  wind.html
src/data/sensor-testcases/cpufreq-info/: thinkpad-x240.txt
src/data/sensor-testcases/sensors/: thinkpad-x240.txt
src/opti/: CMakeLists.txt
src/opti-lib/: CMakeLists.txt  static
src/opti-lib/src/: BatteryParams.cpp  BatteryParams.h  BatterySimulation.cpp  BatterySimulation.h  CLIResultSol.cpp  CLIResultSol.h  CLISol.cpp  CLISol.h  Computer.cpp  Computer.h  ConfigSol.cpp  ConfigSol.h  DistribsTest.cpp  DistribsTest.h  Habit.cpp  Habit.h  HabitCron.cpp  HabitCron.h  HabitCron3rd.cpp  HabitCron3rd.h  JsonReader.cpp  JsonReader.h  OptiEnProfitDataModel.cpp  OptiEnProfitDataModel.h  OptiEnProfitResults.cpp  OptiEnProfitResults.h  OptiEnProfitSubject.cpp  OptiEnProfitSubject.h  OptiSubjectEnProfit.cpp  OptiSubjectEnProfit.h  OptimizerEnProfit.cpp  OptimizerEnProfit.h  PowerUsageSimulation.cpp  PowerUsageSimulation.h  SolUtil.cpp  SolUtil.h  System.cpp  System.h
src/opti/src/: App.cpp  App.h  main.cpp
src/system-cfg/: arrays-template.json  batteries-template.json  computers-template.json  config-volatile-template.json  habits-template.json  system-template.json  wind-template.json
src/ui-menus/: batteries.json  geo.json  habits.json  hydro.json  input_other.json  inputs.json  installation.json  kinetic.json  main.json  miners.json  panels.json  wind.json
tests/: CMakeLists.txt
tests/opti-common-test/: CMakeLists.txt
tests/opti-common-test/src/: OptiTestUtil.cpp  OptiTestUtil.h
tests/opti-system-long-test/: CMakeLists.txt
tests/opti-system-long-test/src/: LongSolutionsTest.cpp
tests/opti-system-min-test/: CMakeLists.txt
tests/opti-system-min-test/src/: EdgeSolutionsTest.cpp  main.cpp
tests/opti-system-test/: CMakeLists.txt
tests/opti-system-test/src/: EdgeSolutionsTest.cpp
tests/opti-test/: CMakeLists.txt
tests/opti-test/src/: CompScheduleTest.cpp  EdgeSolutionsTest.cpp  HabitTest.cpp  JsonTest.cpp  SolUtilTest.cpp
util/: build-debian.sh  build-monero.sh  build-p2pool.sh  build-tools.sh  build-xmrig.sh  ci-debian.sh  ci.sh  config.sh  cpu-freq-read.sh  cpu-freq.sh  deps-build.sh  deps-pull.sh  jobs-query.sh  jobs-remove-all.sh  prep-env.sh  run-monero.sh  run-p2pool.sh  run-xmrig.sh  temperature.py
util/patches/: xmrig-6.18.1.patch
